--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -235,12 +235,33 @@ The MAC network is a recurrent model that performs sequential reasoning,  where 
 }
 
 \headerbox{MAC failures examples on CLEVR}{name=baseline, column=1, below=dataset}{
-	{
-	}
+	
+	
+	
+	\begin{figure}[H]
+	\centering
+	\subfloat[]{{
+			\includegraphics[width=0.9\textwidth]{../img/fail_mac_cogent_b_shape.png}
+			\label{subfig:pendulum_picture}
+	}}
+	
+	\caption{The question reads as: \textit{There is a large gray thing that is on the right side of the big gray cylinder left of the large ball that is on the right side if the cyan rubber sphere; what is its shape?}}
+	\label{fig:fail_mac_shape}
+\end{figure}
+	\begin{figure}[H]
+	\centering
+	\subfloat[]{{
+			\includegraphics[width=0.9\textwidth]{../img/fail_mac_cogent_b_color.png}
+			\label{subfig:pendulum_picture}
+	}}
+	
+	\caption{The question reads as: \textit{There is a tiny block behind the rubber thing that is right if the small brown rubber cylinder that is in front of the yellow metal cylinder; what color is it?}}
+    \label{fig:fail_mac_color}
+\end{figure}
 
-		{
+	
 
-	}
+
 }
 
 \headerbox{References}{name=references, column=1, below=baseline}{
