--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -1,4 +1,4 @@
-\documentclass[final,paperwidth=36in,paperheight=48in,portrait,fontscale=0.3]{baposter}
+\documentclass[final,paperwidth=36in,paperheight=48in,portrait,fontscale=0.35]{baposter}
 % NIPS Workshops format
 
 % Encoding.
@@ -139,61 +139,161 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \headerbox{Abstract}{name=abstract,column=0,row=0}{
-We introduce a variant of the MAC model (Hudson and Manning, ICLR 2018) with a simplified set of equations that achieves comparable accuracy, while training faster. We evaluate both models on CLEVR and CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art. Finally, in contrast, we demonstrate that improper fine-tuning can actually reduce a model's accuracy as well.
+\begin{description}
+	
+	\item[$\bullet$] 	We introduce a variant of the MAC model (Hudson and Manning, ICLR 2018) with a simplified set of equations that achieves comparable accuracy, while training faster 
+	
+	\item[$\bullet$] We evaluate both models on CLEVR and CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art.
+	
+	\item[$\bullet$] We demonstrate that improper fine-tuning can reduce a model's accuracy as well.
+	
+\end{description}
+
 } %headerbox
 
 \headerbox{The MAC Model}{name=double-pendulum, column=0, below=abstract}{
 	\begin{figure}[H]
 		\centering
 		\subfloat[]{{
-				\includegraphics[width=0.60\textwidth]{../img/mac_cell.pdf}
+				\includegraphics[width=0.35\textwidth]{../img/mac_cell.pdf}
 				\label{subfig:pendulum_picture}
 		}}
 	
 		\caption{The MAC cell}
 		\label{fig:pendulum}
 	\end{figure}
+
+\begin{description}
+	\item[$\bullet$] The MAC network is a recurrent model that performs sequential reasoning; at each step the model analyzes the question and shifts the attention over the image
+	\item[$\bullet$] The core of the model is the MAC cell, supported with an input unit that processes the question and image pair, and output unit which produces the answer.
+	\item[$\bullet$] The input unit uses an LSTM to process the question in a word-by-word manner producing a sequence of contextual words and a final question representation.
+	\item[$\bullet$] The input unit utilizes a pre-trained ResNet followed by two CNN layers to extract a feature map  from the image.
 	
-The MAC network is a recurrent model that performs sequential reasoning,  where each step involves analyzing a part of the question followed by shifting the attention over the image. The core of the model is the MAC cell, supported with an input unit that processes the question and image pair, and output unit which produces the answer.  The input unit uses an LSTM to process the question in a word-by-word manner producing a sequence of contextual words and a final question representation. Besides, the input unit utilizes a pre-trained ResNet followed by two CNN layers to extract a feature map (referred to as knowledge base) from the image.
+\end{description}
+
 }
 
-\headerbox{Simplified Mac Model}{name=data acquisition, column=0, below=double-pendulum}{
+\headerbox{Simplified Mac Model (S-MAC)}{name=data acquisition, column=0, below=double-pendulum}{
 	
 	Our proposed modification to the MAC network is based on two heuristic simplifications of the
-	MAC cell. First, we observe that, taking the MAC cell equations as a whole, consecutive linear
-	layers (with no activation in-between) can be combined as one linear layer. Next, we assume that
-	dimension-preserving linear layers are invertible so as to avoid information loss. Applying this
-	principle to the equations, with a careful reorganization, we can apply a single linear layer to the
-	knowledge base prior to all the reasoning steps and work with this projected knowledge base as-is
-	throughout the reasoning steps.
+	MAC cell: 
 	
+	\begin{description}
 	
+    \item[$\bullet$] 	First, we observe that, taking the MAC cell equations as a whole, consecutive linear
+	layers (with no activation in-between) can be combined as one linear layer. 
 	
+	\item[$\bullet$] Secondly, we assume that
+	dimension-preserving linear layers are invertible so as to avoid information loss.
 	
+   \end{description}
+
+\makebox[\textwidth]{MAC  \\[5cm] S-MAC}\\
+\noindent\textbf{Control unit:} 
+For both models, the question $q$ is first transformed in each step of 
+the reasoning using a \emph{position-aware}
+linear layer depending on $i$: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
+
+\begin{multicols}{2}
+	\noindent
+	\begin{align*}
+	&cq_i = W_{cq}^{[d \times 2d]} [c_{i-1}, q_i] + b_{cq}^{[d]}  \tag{c1} \\
+	&ca_{is} = W_{ca}^{[1 \times d]} (cq_i \odot \cw_s) + b_{ca}^{[1]}
+	\tag{c2.1}\\
+	&cv_{is} = \textrm{softmax}(ca_{is}) \tag{c2.2}\\
+	&\cc_i = \sum_s cv_{is} \, \cw_s  \tag{c2.3}
+	\end{align*}
+	\columnbreak
+	{\color{Plum}
+		\begin{align*}
+		&cq_i = W_{cq}^{[d \times d]} c_{i-1} + q_i  \tag{c1} \\
+		&ca_{is} = W_{ca}^{[1 \times d]} (cq_i \odot \cw_s)  \tag{c2.1}\\
+		&cv_{is} = \textrm{softmax}(ca_{is}) \tag{c2.2}\\
+		&\cc_i = \sum_s cv_{is} \, \cw_s  \tag{c2.3}
+		\end{align*}}
+\end{multicols}
+
+\vskip -0.6cm
+
+\noindent\textbf{Read and write units:}
+\begin{multicols}{2}
+	\noindent
+	\begin{align*}
+	&I_{ihw} = (W_{m}^{[d \times d]} \mem_{i-1} + b_{m}^{[d]}) \\
+	& \qquad \quad \odot (W_{k}^{[d \times d]} \kb_{hw} + b_{k}^{[d]}) \tag{r1} \\
+	&I'_{ihw} =  W_{I'}^{[d \times 2d]} [I_{ihw},\kb_{hw}]  + b_{I'}^{[d]}  \tag{r2} \\
+	&ra_{ihw} = W_{ra}^{[1 \times d]} (\cc_i \odot I'_{ihw}) + b_{ra}^{[1]} \tag{r3.1}\\
+	&rv_{ihw} = \textrm{softmax}(ra_{ihw}) \tag{r3.2}\\
+	&\rr_i = \sum_s rv_{ihw} \, \kb_{hw}  \tag{r3.3}\\
+	&\mem_i = W_{rm}^{[d \times d]} [\rr_i, \mem_{i-1}]  + b_{rm}^{[d]} \tag{w1}	
+	\end{align*}
+	\columnbreak
+	{\color{Plum}
+		\begin{align*}
+		&I_{ihw} = \mem_{i-1} \odot \kb_{hw} \tag{r1} \\ \\
+		&I'_{ihw} = W_{I'}^{[d \times d]} I_{ihw} + b_{I'}^{[d]} + \kb_{hw} \tag{r2} \\
+		&ra_{ihw} = W_{ra}^{[1 \times d]} (\cc_i \odot I'_{ihw})  \tag{r3.1}\\
+		&rv_{ihw} = \textrm{softmax}(ra_{ihw}) \tag{r3.2}\\
+		&\rr_i = \sum_s rv_{ihw} \, \kb_{hw}  \tag{r3.3}\\
+		&\mem_i = W_{rm}^{[d \times 2d]} \rr_i + b_{rm}^{[d]} \tag{w1}
+		\end{align*}}
+\end{multicols}
+
+
+
 	
-	\begin{table}[H]
-		\centering
-		\caption{Comparing the number of position-independent parameters between MAC \& S-MAC cells.}
-		\begin{tabular}{llll}
-			\toprule
-			Model        & Read Unit               & Write Unit &  Control Unit         \\
-			\midrule
-			MAC   &  787,969 &  524,800        &    525,313    \\
-			%\midrule
-			simplified MAC & 263,168  & 262,656       &    263,168 \\
-			\midrule
-			Reduction by [\%]  & 67\%  &   50\%       &      50\%  \\
-			\bottomrule
-		\end{tabular}
-		\label{tab:data_properties}
-	\end{table}
+\begin{table}[H]
+	\centering
+	\caption{Comparing the number of position-independent parameters between MAC \& S-MAC cells.}
+	\begin{tabular}{llll}
+		\toprule
+		Model        & Read Unit               & Write Unit &  Control Unit         \\
+		\midrule
+		MAC   &  787,969 &  524,800        &    525,313    \\
+		%\midrule
+		simplified MAC & 263,168  & 262,656       &    263,168 \\
+		\midrule
+		Reduction by [\%]  & 67\%  &   50\%       &      50\%  \\
+		\bottomrule
+	\end{tabular}
+	\label{tab:data_properties}
+\end{table}
+
+
+
+
 }
 
 \headerbox{Transfer Learning - Experiments}{name=dataset, column=1}{
+
+Along with CLEVR, the authors~\cite{hudson2018compositional} introduced  CLEVR-CoGenT (Compositional Generalization Test, CoGenT in short), with a goal of evaluating how well the models can generalize, learn relations and compositional concepts.
+This dataset is generated in the same way as CLEVR, with two conditions, A and B. as shown in Table 2.
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{llll}
+			\toprule
+			Dataset        & Cubes              & Cylinders &  Spheres         \\
+			\midrule
+			CLEVR   &  any color &  any color        &    any color    \\
+			CLEVR CoGenT A & gray / blue / brown / yellow  & red / green / purple / cyan       &    any color  \\
+			CLEVR CoGenT B  & red / green / purple / cyan &   gray / blue / brown / yellow       &      any color  \\
+			\bottomrule
+		\end{tabular}
+		\caption{Colors/shapes combinations present in CLEVR, CoGenT-A and CoGenT-B datasets.}
+		\label{tab:cogent_conditions}
+	\end{table}
+	
+	
+	
+	
+	
+	
+	
 	\begin{table}[H]
 	\centering
-	\scalebox{0.8}{
-	\caption{Comparing the number of position-independent parameters between MAC \& S-MAC cells.}
+	\scalebox{0.9}{
+	\caption{CLEVR \& CoGenT accuracies for the MAC \& S-MAC models. The [Training] column indicates wall times and final accuracies on the training set. For fine-tuning, we use 30k samples of the test set, and kept the remainder for testing. The [Fine-tuning] column reports the used sub-set (30k samples) and the final accuracies on this sub-set during training. The [Test] column reports the used set and the obtained test accuracies. If no fine-tuning was done, the whole indicated set was used for testing.}
 	\begin{tabular}{lllllllll}
 		\toprule
 		\multirow{2}{*}{Model} & \multicolumn{3}{c}{Training} &  \multicolumn{2}{c}{Fine-tuning} & \multicolumn{2}{c}{Test} & \multirow{2}{*}{Row} \\
@@ -236,14 +336,14 @@ The MAC network is a recurrent model that performs sequential reasoning,  where 
 \end{table}
 }
 
-\headerbox{MAC failures examples on CLEVR}{name=baseline, column=1, below=dataset}{
+\headerbox{MAC limitations on CLEVR}{name=baseline, column=1, below=dataset}{
 	
 	
 	
 	\begin{figure}[H]
 	\centering
 	\subfloat[]{{
-			\includegraphics[width=0.9\textwidth]{../img/fail_mac_cogent_b_shape.png}
+			\includegraphics[width=0.6\textwidth]{../img/fail_mac_cogent_b_shape.png}
 			\label{subfig:pendulum_picture}
 	}}
 	
@@ -253,7 +353,7 @@ The MAC network is a recurrent model that performs sequential reasoning,  where 
 	\begin{figure}[H]
 	\centering
 	\subfloat[]{{
-			\includegraphics[width=0.9\textwidth]{../img/fail_mac_cogent_b_color.png}
+			\includegraphics[width=0.6\textwidth]{../img/fail_mac_cogent_b_color.png}
 			\label{subfig:pendulum_picture}
 	}}
 	
@@ -267,10 +367,12 @@ The MAC network is a recurrent model that performs sequential reasoning,  where 
 }
 
 \headerbox{References}{name=references, column=1, below=baseline}{
-
-
+\bibliographystyle{alpha}
+\bibliography{vigil_bibliograph}
 }
 
 \end{poster}
+
+
 
 \end{document}
