--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -9,7 +9,7 @@
 \usepackage{booktabs} % for professional tables
 \usepackage{floatrow}
 \usepackage{amsmath} % For typesetting math
-\usepackage[font=small,labelfont=bf]{caption} % Required for specifying captions to tables and figures
+\usepackage[font=small,labelfont=bf, justification=centering]{caption} % Required for specifying captions to tables and figures
 
 \usepackage{multicol} % Required for multiple columns
 \setlength{\columnsep}{1cm}
@@ -42,13 +42,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Begin of Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \frenchspacing
 
 \begin{document}
-
-
 
 \hyphenation{resolution occlusions}
 %%
@@ -75,7 +71,7 @@
   eyecatcher=true,
   headerborder=closed,
   columns=2,
-  headerheight=4cm,
+  headerheight=3cm,
 %  textfont=\sc, An example of changing the text font
   headershape=roundedright,
   headershade=shadelr,
@@ -87,83 +83,63 @@
   linewidth=1pt
   } 
   { % Left Eye Catcher - IBM logo
-\includegraphics[width=4cm]{../img/ibm_research.png}
+	\includegraphics[width=4cm]{../img/ibm_research.png}
   } 
   % Title
   	{\bf\textsc{On transfer learning using a MAC model variant}\vspace{0.2em}}
   % Authors
   {
-	\textbf{Vincent Marois, T.S. Jayram, Vincent Albouy, Tomasz Kornuta, \\Younes Bouhadjar, Ahmet S. Ozcan}\\
-
-	\texttt{\{vmarois,jayram,tkornut,byounes,asozcan\}@us.ibm.com},{\{vincent.albouy\}@ibm.com}\\
+	\textbf{\null\hfill Vincent Marois \hfill T.S. Jayram \hfill Vincent Albouy \hfill Tomasz Kornuta \hfill\null}\\
+	\textbf{\null\hfill Younes Bouhadjar \hfill Ahmet S. Ozcan \hfill\null}\\
+	\texttt{\{vmarois,jayram,tkornut,byounes,asozcan\}@us.ibm.com, \{vincent.albouy\}@ibm.com}
   }
   { % Left Eye Catcher
-  
-\includegraphics[width=4cm]{../img/arc_logo.png}
-
-
-
+  	\includegraphics[width=4cm]{../img/arc_logo.png}
   }
 
-
-% A coloured circle useful as a bullet with an adjustably strong filling
-\newcommand{\colouredcircle}{%
-\tikz{\useasboundingbox (-0.2em,-0.32em) rectangle(0.2em,0.32em); \draw[draw=black,fill=lightblue,line width=0.03em] (0,0) circle(0.16em);}}
-\tikzstyle{block} = [draw,minimum size=2.5em, outer sep=2]
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\headerbox{Abstract}{name=abstract,column=0,row=0}{
-\begin{description}
+\headerbox{Summary}{name=summary,column=0,row=0}{
+\begin{itemize}
+	\compresslist
+	\item[$\bullet$] We introduce a simplified variant of the MAC model (\textit{Hudson and Manning, ICLR 2018}), which achieves comparable accuracy while training faster.
+	\item[$\bullet$] We evaluate both models on CLEVR \& CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art.
+	\item[$\bullet$] We also demonstrate that improper fine-tuning can reduce a model's accuracy.
 	
-	\item[$\bullet$] 	We introduce a variant of the MAC model (Hudson and Manning, ICLR 2018) with a simplified set of equations that achieves comparable accuracy, while training faster 
-	
-	\item[$\bullet$] We evaluate both models on CLEVR and CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art.
-	
-	\item[$\bullet$] We demonstrate that improper fine-tuning can reduce a model's accuracy as well.
-	
-\end{description}
+\end{itemize}
 
 } %headerbox
 
-\headerbox{The MAC Model ~\cite{hudson2018compositional}}{name=double-pendulum, column=0, below=abstract}{
+\headerbox{The MAC Model ~\cite{hudson2018compositional}}{name=mac-model, column=0, below=summary}{
+	\vspace{-10pt}
 	\begin{figure}[H]
 		\centering
-	
 		\includegraphics[width=0.33\textwidth]{../img/mac_cell.pdf}
-		\label{subfig:pendulum_picture}
-		\caption{The MAC cell ~\cite{hudson2018compositional}}
-		\label{fig:pendulum}
+		\caption{The MAC cell ~\cite{hudson2018compositional}.}
+		\label{fig:mac_cell}
 	\end{figure}
-
-\begin{description}
-	\item[$\bullet$] The MAC network is a recurrent model that performs sequential reasoning; at each step the model analyzes the question and shifts the attention over the image
-	\item[$\bullet$] The core of the model is the MAC cell, supported with an input unit that processes the question and image pair, and output unit which produces the answer.
-	\item[$\bullet$] The input unit uses an LSTM to process the question  and CNN layers to extract a feature map  from the image.
-	
-\end{description}
-
+	\vspace{-20pt}
+	\begin{itemize}
+		\compresslist
+		\item[$\bullet$] MAC network: a recurrent model performing sequential reasoning. At each step, it analyzes the question and shifts the attention over the image.
+		\item[$\bullet$] Recurrent MAC cell: consists of a control unit, a read unit \& a write unit. The control unit updates the control state $c_i$ \& drives the attention over the question words.
+		\item[$\bullet$] The read unit, guided by $c_i$ extracts information from the image. The write unit uses this information to update the memory state $m_i$.
+	\end{itemize}
 }
 
-\headerbox{Simplified Mac Model (S-MAC)}{name=data acquisition, column=0, below=double-pendulum}{
+\headerbox{Simplified Mac Model (S-MAC)}{name=s-mac, column=0, below=mac-model}{
 	
-	Our proposed modification to the MAC network is based on two heuristic simplifications:
+	Based on two heuristic simplifications:
 	
-	\begin{description}
-	
-    \item[$\bullet$] 	First, we observe that, taking the MAC cell equations as a whole, consecutive linear
-	layers (with no activation in-between) can be combined as one linear layer. 
-	
-	\item[$\bullet$] Secondly, we assume that
-	dimension-preserving linear layers are invertible so as to avoid information loss.
-	
-   \end{description}
+	\begin{itemize}
+		\compresslist
+	    \item[$\bullet$] Taking the MAC cell equations as a whole, consecutive linear layers (with no activation in-between) can be combined as one linear layer.
+		\item[$\bullet$] We assume that dimension-preserving linear layers are invertible so as to avoid information loss.
+    \end{itemize}
+
+	This allows, with a careful reorganization, to apply a single linear layer to the \textit{knowledge base} (feature map extracted from the image) prior to all the reasoning steps and work with this projection throughout the reasoning steps.\\
 
 \makebox[\textwidth]{MAC  \\[5cm] S-MAC}\\
-\noindent\textbf{Control unit:} 
-For both models, the question $q$ is first transformed in each step of 
-the reasoning using a \emph{position-aware}
-linear layer depending on $i$: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
+\noindent\textbf{Control unit:} The question $q$ is first made \emph{position-aware} in each reasoning step using an $i$-dependent projection: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 
 
 \begin{multicols}{2}
@@ -210,15 +186,6 @@ linear layer depending on $i$: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 		&\mem_i = W_{rm}^{[d \times 2d]} \rr_i + b_{rm}^{[d]} \tag{w1}
 		\end{align*}}
 \end{multicols}
-
-
-
-\begin{description}
-	
-	\item[$\bullet$] Simplifications results in a 10\% speed up in training time.
-	
-\end{description}
-
 	
 \begin{table}[H]
 	\centering
@@ -234,7 +201,7 @@ linear layer depending on $i$: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 		Reduction by [\%]  & 67\%  &   50\%       &      50\%  \\
 		\bottomrule
 	\end{tabular}
-	\label{tab:data_properties}
+	\label{tab:mac_cell_parameters}
 \end{table}
 
 }
@@ -242,7 +209,7 @@ linear layer depending on $i$: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 
 
 
-\headerbox{Links}{name=links,column=0,below=data acquisition}{
+\headerbox{Links}{name=links,column=0,below=s-mac}{
 	\vspace{-15pt}
 	\begin{minipage}[H]{0.4\textwidth}
 		\begin{figure}[H]
