--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -1,4 +1,4 @@
-\documentclass[final,paperwidth=36in,paperheight=48in,portrait,fontscale=0.36]{baposter}
+\documentclass[paperwidth=36in,paperheight=48in,portrait,fontscale=0.36]{baposter}
 % NIPS Workshops format
 
 % Encoding.
@@ -9,7 +9,7 @@
 \usepackage{booktabs} % for professional tables
 \usepackage{floatrow}
 \usepackage{amsmath} % For typesetting math
-\usepackage[font=small,labelfont=bf, justification=centering]{caption} % Required for specifying captions to tables and figures
+\usepackage[labelfont=bf, justification=centering]{caption} % Required for specifying captions to tables and figures
 
 \usepackage{multicol} % Required for multiple columns
 \setlength{\columnsep}{1cm}
@@ -101,9 +101,9 @@
 \headerbox{Summary}{name=summary,column=0,row=0}{
 \begin{itemize}
 	\compresslist
-	\item[$\bullet$] We introduce a simplified variant of the MAC model (\textit{Hudson and Manning, ICLR 2018}), which achieves comparable accuracy while training faster.
-	\item[$\bullet$] We evaluate both models on CLEVR \& CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art.
-	\item[$\bullet$] We also demonstrate that improper fine-tuning can reduce a model's accuracy.
+	\item[$\bullet$] We introduce a \emph{\textbf{simplified}} variant of the MAC model (\textit{Hudson and Manning, ICLR 2018}), which achieves comparable accuracy while training \emph{\textbf{faster}}.
+	\item[$\bullet$] We evaluate both models on CLEVR \& CoGenT, and show that, \emph{\textbf{transfer learning with fine-tuning}} results in a 15 point increase in accuracy, matching the state of the art.
+	\item[$\bullet$] We also demonstrate that \emph{\textbf{improper}} fine-tuning can reduce a model's accuracy.
 	
 \end{itemize}
 
@@ -138,27 +138,29 @@
 
 	This allows, with a careful reorganization, to apply a single linear layer to the \textit{knowledge base} (feature map extracted from the image) prior to all the reasoning steps and work with this projection throughout the reasoning steps.\\
 
-\makebox[\textwidth]{MAC  \\[5cm] S-MAC}\\
+\makebox[\textwidth]{\textbf{MAC \\[5cm] S-MAC}}\\
+\vspace{-5pt}
+\hrule
+\vspace{10pt}
 \noindent\textbf{Control unit:} The question $q$ is first made \emph{position-aware} in each reasoning step using an $i$-dependent projection: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 
 
 \begin{multicols}{2}
 	\noindent
 	\begin{align*}
-	&cq_i = W_{cq}^{[d \times 2d]} [c_{i-1}, q_i] + b_{cq}^{[d]}  \tag{c1} \\
-	&ca_{is} = W_{ca}^{[1 \times d]} (cq_i \odot \cw_s) + b_{ca}^{[1]}
-	\tag{c2.1}\\
-	&cv_{is} = \textrm{softmax}(ca_{is}) \tag{c2.2}\\
-	&\cc_i = \sum_s cv_{is} \, \cw_s  \tag{c2.3}
+		&cq_i = W_{cq}^{[d \times 2d]} [c_{i-1}, q_i] + b_{cq}^{[d]}  \tag{c1} \\
+		&ca_{is} = W_{ca}^{[1 \times d]} (cq_i \odot \cw_s) + b_{ca}^{[1]}
+		\tag{c2.1}\\
+		&cv_{is} = \textrm{softmax}(ca_{is}) \tag{c2.2}\\
+		&\cc_i = \sum_s cv_{is} \, \cw_s  \tag{c2.3}
 	\end{align*}
 	\columnbreak
-	{
-		\begin{align*}
+	{\begin{align*}
 		&cq_i = W_{cq}^{[d \times d]} c_{i-1} + q_i  \tag{c1} \\
 		&ca_{is} = W_{ca}^{[1 \times d]} (cq_i \odot \cw_s)  \tag{c2.1}\\
 		&cv_{is} = \textrm{softmax}(ca_{is}) \tag{c2.2}\\
 		&\cc_i = \sum_s cv_{is} \, \cw_s  \tag{c2.3}
-		\end{align*}}
+	\end{align*}}
 \end{multicols}
 
 \vskip -0.6cm
@@ -167,26 +169,26 @@
 \begin{multicols}{2}
 	\noindent
 	\begin{align*}
-	&I_{ihw} = (W_{m}^{[d \times d]} \mem_{i-1} + b_{m}^{[d]}) \\
-	& \qquad \quad \odot (W_{k}^{[d \times d]} \kb_{hw} + b_{k}^{[d]}) \tag{r1} \\
-	&I'_{ihw} =  W_{I'}^{[d \times 2d]} [I_{ihw},\kb_{hw}]  + b_{I'}^{[d]}  \tag{r2} \\
-	&ra_{ihw} = W_{ra}^{[1 \times d]} (\cc_i \odot I'_{ihw}) + b_{ra}^{[1]} \tag{r3.1}\\
-	&rv_{ihw} = \textrm{softmax}(ra_{ihw}) \tag{r3.2}\\
-	&\rr_i = \sum_s rv_{ihw} \, \kb_{hw}  \tag{r3.3}\\
-	&\mem_i = W_{rm}^{[d \times d]} [\rr_i, \mem_{i-1}]  + b_{rm}^{[d]} \tag{w1}	
+		&I_{ihw} = (W_{m}^{[d \times d]} \mem_{i-1} + b_{m}^{[d]}) \\
+		& \qquad \quad \odot (W_{k}^{[d \times d]} \kb_{hw} + b_{k}^{[d]}) \tag{r1} \\
+		&I'_{ihw} =  W_{I'}^{[d \times 2d]} [I_{ihw},\kb_{hw}]  + b_{I'}^{[d]}  \tag{r2} \\
+		&ra_{ihw} = W_{ra}^{[1 \times d]} (\cc_i \odot I'_{ihw}) + b_{ra}^{[1]} \tag{r3.1}\\
+		&rv_{ihw} = \textrm{softmax}(ra_{ihw}) \tag{r3.2}\\
+		&\rr_i = \sum_s rv_{ihw} \, \kb_{hw}  \tag{r3.3}\\
+		&\mem_i = W_{rm}^{[d \times d]} [\rr_i, \mem_{i-1}]  + b_{rm}^{[d]} \tag{w1}
 	\end{align*}
 	\columnbreak
-	{
-		\begin{align*}
+	{\begin{align*}
 		&I_{ihw} = m _{i-1} \odot k _{hw} \tag{r1} \\ 
 		&I'_{ihw} = W_{I'}^{[d \times d]} I_{ihw} + b_{I'}^{[d]} + \kb_{hw} \tag{r2} \\
 		&ra_{ihw} = W_{ra}^{[1 \times d]} (\cc_i \odot I'_{ihw})  \tag{r3.1}\\
 		&rv_{ihw} = \textrm{softmax}(ra_{ihw}) \tag{r3.2}\\
 		&\rr_i = \sum_s rv_{ihw} \, \kb_{hw}  \tag{r3.3}\\
 		&\mem_i = W_{rm}^{[d \times 2d]} \rr_i + b_{rm}^{[d]} \tag{w1}
-		\end{align*}}
+	\end{align*}}
 \end{multicols}
-	
+
+\vspace{-15pt}
 \begin{table}[H]
 	\centering
 	\caption{Comparing the number of position-independent parameters between MAC \& S-MAC cells.}
@@ -195,8 +197,7 @@
 		Model        & Read Unit               & Write Unit &  Control Unit         \\
 		\midrule
 		MAC   &  787,969 &  524,800        &    525,313    \\
-		%\midrule
-		simplified MAC & 263,168  & 262,656       &    263,168 \\
+		S-MAC & 263,168  & 262,656       &    263,168 \\
 		\midrule
 		Reduction by [\%]  & 67\%  &   50\%       &      50\%  \\
 		\bottomrule
@@ -205,9 +206,6 @@
 \end{table}
 
 }
-
-
-
 
 \headerbox{Links}{name=links,column=0,below=s-mac}{
 	\vspace{-15pt}
@@ -230,33 +228,20 @@
 	\end{minipage}
 }
 
-	
-	
-	
-
-
-\headerbox{Datasets - CLEVR and CoGenT}{name=dataset, column=1}{
-The CLEVR task:
-		\begin{figure}[H]
-		\centering
-		\includegraphics[width=0.31\textwidth]{../img/teaser.jpg}
-	    \end{figure}
-    
-    
-    \begin{description}
-    	\centering
-    	\item[$\cdot$] \textit{How many objects are either small cylinders or red things?}
-    	
-    \end{description}
-
-
-   \begin{description}
-   	\item[$\bullet$]Along with CLEVR, the authors~\cite{johnson2017clevr} introduced  CLEVR-CoGenT 
-   	\item[$\bullet$] The goal is to evaluate how well the models can generalize, learn relations and compositional concepts.
-   	\item[$\bullet$] This dataset is generated in the same way as CLEVR, with two conditions, A and B. as shown in Table 2.
-
-   \end{description}
-
+\headerbox{The CLEVR \& CoGenT datasets}{name=datasets, column=1}{
+	\vspace{-10pt}
+	\begin{figure}[H]
+		\includegraphics[width=0.4\textwidth]{../img/teaser.jpg}
+		\caption{\textit{How many objects are either small cylinders or red things?}}
+		\label{fig:clevr_task}
+	\end{figure}
+	\vspace{-10pt}
+	\begin{itemize}
+	  	\compresslist
+	  	\item[$\bullet$] The authors~\cite{johnson2017clevr} also introduced CLEVR-CoGenT, to evaluate how well a model can learn relations and compositional concepts.
+	  	\item[$\bullet$] Similar to CLEVR, but with two conditions, as follows:
+	\end{itemize}
+	\vspace{-10pt}
 	\begin{table}[H]
 		\centering
 		\begin{tabular}{llll}
@@ -264,8 +249,8 @@ The CLEVR task:
 			Dataset        & Cubes              & Cylinders &  Spheres         \\
 			\midrule
 			CLEVR   &  any color &  any color        &    any color    \\
-			CLEVR CoGenT A & gray / blue / brown / yellow  & red / green / purple / cyan       &    any color  \\
-			CLEVR CoGenT B  & red / green / purple / cyan &   gray / blue / brown / yellow       &      any color  \\
+			CLEVR CoGenT-A & gray / blue / brown / yellow  & red / green / purple / cyan       &    any color  \\
+			CLEVR CoGenT-B  & red / green / purple / cyan &   gray / blue / brown / yellow       &      any color  \\
 			\bottomrule
 		\end{tabular}
 		\caption{Colors/shapes combinations present in CLEVR, CoGenT-A and CoGenT-B datasets.}
@@ -274,47 +259,44 @@ The CLEVR task:
 	
 }
 
-
-
-
-\headerbox{Transfer Learning - Experiments}{name=transfer, column=1, below=dataset}{
+\headerbox{Experiments \& Results}{name=experiments, column=1, below=datasets}{
 
 CLEVR \& CoGenT accuracies for the MAC \& S-MAC models:
 	\begin{table}[H]
 	\centering
 	\scalebox{1}{
-	\begin{tabular}{lllllllll}
+	\begin{tabular}{cccccccc}
 		\toprule
-		\multirow{2}{*}{Model} & \multicolumn{3}{c}{Training} &  \multicolumn{2}{c}{Fine-tuning} & \multicolumn{2}{c}{Test} & \multirow{2}{*}{Row} \\
+		\multirow{2}{*}{Model} & \multicolumn{3}{c}{Training} &  \multicolumn{2}{c}{Fine-tuning} & \multicolumn{2}{c}{Test} \\
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
-		& Dataset                & Time [h:m] & Acc [\%]          & Dataset & Acc [\%]  & Dataset & Acc [\%] & \\
+		& Dataset                & Time [h:m] & Acc [\%]          & Dataset & Acc [\%]  & Dataset & Acc [\%] \\
 		\midrule
-		MAC & CLEVR  & 30:52  & 96.70 & --   & --  & CLEVR    & 96.17         & (a) \\
+		MAC & CLEVR  & 30:52  & 96.70 & --   & --  & CLEVR    & 96.17 \\
 		\cmidrule{1-8}
 		\cmidrule{1-8}
 		
-		\multirow{13}{*}{S-MAC} & CLEVR  & 28:30  & 95.82 & --   & --  & CLEVR    & 95.29         & (b)  \\
+		\multirow{13}{*}{S-MAC} & CLEVR  & 28:30  & 95.82 & --   & --  & CLEVR    & 95.29 \\
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		
-		& CoGenT-A  & 28:33   & 96.09 &  --  &  --  & CoGenT-A & 95.91        & (c)  \\
+		& CoGenT-A  & 28:33   & 96.09 &  --  &  --  & CoGenT-A & 95.91 \\
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		
 		
-		& \multirow{2}{*}{CLEVR}  & \multirow{2}{*}{28:30}  & \multirow{2}{*}{95.82} & \multirow{2}{*}{--}   & \multirow{2}{*}{--}  &   CoGenT-A    &  95.47  & (d) \\
+		& \multirow{2}{*}{CLEVR}  & \multirow{2}{*}{28:30}  & \multirow{2}{*}{95.82} & \multirow{2}{*}{--}   & \multirow{2}{*}{--}  &   CoGenT-A    &  95.47 \\
 		\cmidrule{7-8} 
-		&                        &   &              &     &                               & CoGenT-B   &  95.58  & (e)\\		
+		&                        &   &              &     &                               & CoGenT-B   &  95.58  \\		
 		
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
-		& \multirow{4}{*}{CoGenT-A}   & \multirow{4}{*}{28:33}   & \multirow{4}{*}{96.09}  &  \multirow{1}{*}{--}  &  \multirow{1}{*}{--}   & CogenT-B & 78.71        & (f)  \\
+		& \multirow{4}{*}{CoGenT-A}   & \multirow{4}{*}{28:33}   & \multirow{4}{*}{96.09}  &  \multirow{1}{*}{--}  &  \multirow{1}{*}{--}   & CogenT-B & 78.71 \\
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{96.85}          & CoGenT-A &  91.24        & (g) \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{96.85}          & CoGenT-A &  91.24 \\
 		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    94.55     & (h)  \\
+		&                             &                                         &       &         &                & CoGenT-B &    94.55 \\
 		
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
-		& \multirow{2}{*}{CLEVR}  & \multirow{2}{*}{28:30}  & \multirow{2}{*}{95.82} &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{97.67}          & CoGenT-A &  92.11       & (i) \\
+		& \multirow{2}{*}{CLEVR}  & \multirow{2}{*}{28:30}  & \multirow{2}{*}{95.82} &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{97.67}          & CoGenT-A &  92.11 \\
 		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    92.95    & (j)  \\  		
+		&                             &                                         &       &         &                & CoGenT-B &    92.95 \\  		
 		
 		
 		\bottomrule
@@ -338,7 +320,7 @@ CLEVR \& CoGenT accuracies for the MAC \& S-MAC models:
 
 
 
-\headerbox{MAC drawbacks on CLEVR}{name=baseline, column=1, below=transfer}{
+\headerbox{MAC drawbacks on CLEVR}{name=baseline, column=1, below=experiments}{
 	
 	
 	
