--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -317,7 +317,7 @@
 
 }
 
-\headerbox{MAC drawbacks on CLEVR}{name=mac-failures, column=1, below=experiments}{
+\headerbox{Compositional generalization of the MAC model}{name=mac-failures, column=1, below=experiments}{
 	\vspace{-10pt}
 	\begin{figure}[H]
 		\includegraphics[width=0.60\textwidth]{../img/fail_mac_cogent_b_shape.png}
@@ -327,8 +327,8 @@
 	\vspace{-20pt}
 	\begin{itemize}
 		\compresslist
-		\item[$\bullet$] Asked about the shape of the leftmost gray cylinder, the model correctly finds it, (cf. \emph{visual attention map}), and refers to it using its color (\emph{attention over the question words}).
-		\item[$\bullet$] Yet, predicts the shape as \textbf{cube}, as it never saw \emph{gray cylinders} during training, but saw \emph{gray cubes}.
+		\item[$\bullet$] Asked about the shape of the leftmost \textbf{gray cylinder}, the model correctly finds it, (cf. \emph{visual attention map}), and refers to it using its color (\emph{attention over the question words}).
+		\item[$\bullet$] Yet, predicts the shape as \textbf{cube}, as it never saw \textbf{gray cylinders} during training, but saw \textbf{gray cubes}.
 		\item[$\rightarrow$] Indicate that MAC does not separate shape from color, but has a better understanding of colors (as found the object by its color).
 	\end{itemize}
 }
