--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -3,8 +3,8 @@
 
 % Encoding.
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-
+%\usepackage[T1]{fontenc}
+\renewcommand{\familydefault}{\sfdefault}
 \usepackage{graphicx} % Required for including images
 \usepackage{booktabs} % for professional tables
 \usepackage{floatrow}
